@@ -5,6 +5,7 @@ Changes in 3.2.2 :
 - Make sure paths in webseed http requests are URL encoded (189477)
 - Prevent torrent from being loaded twice when loading torrents via commandline or external program (190434)
 - Fix crash caused by uncaught exception (190317)
+- Fix crash caused by sorting list of torrent in QM when the list is being cleared (190759)
 
 Changes in 3.2.1 :
 - Resort torrents if display name is changed
